French translation updated

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,14 @@
+2006-08-17  Philippe Batailler  <philippe.batailler@free.fr>
+	
+	* po4a/dpkg-statoverride.8/po/fr.po: updated translation.
+	* po4a/dpkg-name.1/po/fr.po: likewise.
+	* po4a/update-alternatives.8/po/fr.po: likewise.
+	* po4a/start-stop-daemon.8/po/fr.po: likewise.
+	* po4a/dpkg-source.1/po/fr.po: likewise.
+	* po4a/dpkg-divert.8/po/fr.po: likewise.
+	* po4a/deb-control.5/po/fr.po: likewise.
+	* po4a/dpkg.1/po/fr.po: likewise.
+	
 2006-08-07  KISE Hiroshi  <kise@fuyuneko.jp>
 
 	* po4a/add_ja/dpkg-name.1.ja.add: Recode the addendum in UTF-8.
