--- a/man/po4a/dpkg-name.1/po/fr.po
+++ b/man/po4a/dpkg-name.1/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-28 21:10+0200\n"
-"PO-Revision-Date: 2006-05-14 10:21+0200\n"
+"PO-Revision-Date: 2006-08-17 10:50+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -73,7 +73,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:33
-#, fuzzy
 msgid ""
 "This manual page documents the B<dpkg-name> sh script which provides an easy "
 "way to rename B<Debian> packages into their full package names. A full "
@@ -143,7 +142,6 @@ msgstr "B<-s, --subdir> [I<rep>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:56
-#, fuzzy
 msgid ""
 "Files will be moved into a subdirectory. If the directory given as argument "
 "exists the files will be moved into that directory otherwise the name of the "
@@ -163,7 +161,7 @@ msgstr ""
 "». Quand la section est «\\ non-free\\ » ou «\\ contrib\\ », ou bien quand "
 "aucune information sur la section n'est trouvée dans le fichier «\\ control"
 "\\ », le répertoire cible est «\\ E<lt>sectionE<gt>/binary-"
-"E<lt>architectureE<gt>\\ ». le champ «\\ section\\ » est facultatif\\ ; "
+"E<lt>architectureE<gt>\\ ». Le champ «\\ section\\ » est facultatif\\ ; "
 "aussi beaucoup de paquets sont dans la zone «\\ no-section\\ ». Utilisez "
 "cette option avec soin\\ : elle est compliquée."
 
@@ -296,7 +294,6 @@ msgstr "BOGUES"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:100
-#, fuzzy
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
@@ -307,8 +304,8 @@ msgstr ""
 "Certains paquets ne respectent pas l'organisation "
 "E<lt>paquetE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Les paquets "
 "traités par dpkg-name la respecte. Cela n'a pas de conséquence sur la façon "
-"dont dselect/dpkg installe les paquets, mais il se peut que d'autres "
-"systèmes d'installation aient besoin de cette organisation."
+"dont B<dselect>(1) ou B<dpkg>(1) installe les paquets, mais il se peut que "
+"d'autres systèmes d'installation aient besoin de cette organisation."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:100
