--- a/man/po4a/dpkg-statoverride.8/po/fr.po
+++ b/man/po4a/dpkg-statoverride.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-29 18:04+0200\n"
-"PO-Revision-Date: 2006-06-24 10:35+0200\n"
+"PO-Revision-Date: 2006-08-17 11:05+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -81,7 +81,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:28
-#, fuzzy
 msgid ""
 "`B<stat overrides>' are a way to tell B<dpkg>(1)  to use a different owner "
 "or mode for a file when a package is installed. (note: I use the word `file' "
@@ -90,11 +89,11 @@ msgid ""
 "that are normally setuid to be install without a setuid flag, or only "
 "executable by a certain group."
 msgstr ""
-"Les «\\ B<dérogations au statut>\\ » sont une façon de demander à Dpkg de "
-"changer le propriétaire ou le mode d'un fichier lors de l'installation d'un "
-"paquet. (Note\\ : je dis «\\ fichier\\ » ici, mais cela peut être en réalité "
-"n'importe quel système de fichiers gérable par Dpkg, par exemple, des "
-"répertoires, des périphériques, etc.) On peut s'en servir pour forcer "
+"Les «\\ B<dérogations au statut>\\ » sont une façon de demander à B<dpkg>(1) "
+"de changer le propriétaire ou le mode d'un fichier lors de l'installation "
+"d'un paquet. (Note\\ : je dis «\\ fichier\\ » ici, mais cela peut être en "
+"réalité n'importe quel système de fichiers gérable par Dpkg, par exemple, "
+"des répertoires, des périphériques, etc.) On peut s'en servir pour forcer "
 "l'installation de programmes qui sont normalement «\\ setuid\\ » sans ce "
 "drapeau «\\ setuid\\ », ou pour les rendre exécutables seulement par un "
 "groupe donné."
@@ -123,7 +122,6 @@ msgstr "B<--add>I< E<lt>utilisateurE<gt> E<lt>groupeE<gt> E<lt>modeE<gt> E<lt>fi
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:41
-#, fuzzy
 msgid ""
 "Add an override for B<E<lt>fileE<gt>>. B<E<lt>fileE<gt>> does not need to "
 "exist when this command is used; the override will be stored and used "
