--- a/man/po4a/dpkg.1/po/fr.po
+++ b/man/po4a/dpkg.1/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-08-02 22:21+0200\n"
-"PO-Revision-Date: 2006-05-14 11:25+0200\n"
+"PO-Revision-Date: 2006-08-17 10:01+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -95,7 +95,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:26
-#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
@@ -105,7 +104,7 @@ msgid ""
 "some way."
 msgstr ""
 "B<dpkg> est un outil pour l'installation, la création, la suppression et la "
-"gestion des paquets Debian. B<Dselect>(1) est la principale interface à "
+"gestion des paquets Debian. B<dselect>(1) est la principale interface à "
 "B<dpkg> et la plus agréable pour l'utilisateur.  B<dpkg> lui-même est "
 "entièrement contrôlé par des paramètres sur la ligne de commande. Une "
 "commande comporte exactement une action et zéro ou plusieurs options. Le "
@@ -114,13 +113,12 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:31
-#, fuzzy
 msgid ""
 "B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
-"On peut aussi utiliser B<dpkg> comme une interface à B<dpkg-deb>. Quand "
+"On peut aussi utiliser B<dpkg> comme une interface à B<dpkg-deb>(1). Quand "
 "B<dpkg> rencontre les actions suivantes, qui sont des actions de B<dpkg-"
 "deb>, il lance simplement B<dpkg-deb> avec les paramètres qui lui ont été "
 "fournis\\ :"
@@ -675,7 +673,6 @@ msgstr "B<dpkg --print-architecture>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
-#, fuzzy
 msgid ""
 "Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
@@ -786,9 +783,9 @@ msgstr "Affiche la version de B<dpkg>."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg-deb actions>"
-msgstr "B<dpkg-deb-actions>"
+msgstr "B<dpkg-deb actions>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:253
@@ -839,9 +836,9 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg-query actions>"
-msgstr "B<dpkg-query-actions>"
+msgstr "B<dpkg-query actions>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:278
@@ -905,11 +902,10 @@ msgstr "B<--abort-after=>I<nombre>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
-#, fuzzy
 msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr ""
-"Modifie le nombre d'erreurs au delà duquel dpkg s'arrête. il est par défaut "
-"égal à 50."
+"Modifie le nombre d'erreurs au delà duquel B<dpkg> s'arrête. il est par "
+"défaut égal à 50."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:302
@@ -937,7 +933,6 @@ msgstr "B<-D>I<octal>B< | --debug=>I<octal>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:314
-#, fuzzy
 msgid ""
 "Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
@@ -1013,7 +1008,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
-#, fuzzy
 msgid "B<all>: Turns on (or off) all force options."
 msgstr "B<all>\\ : Met en oeuvre (ou pas) toutes les options de forçage."
 
@@ -1294,13 +1288,12 @@ msgstr "B<-G>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:452
-#, fuzzy
 msgid ""
 "Don't install a package if a newer version of the same package is already "
 "installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 "Ne pas installer un paquet si une version plus récente de ce paquet est déjà "
-"installée. C'est un alias pour B<--refuse-downgrade.>."
+"installée. C'est un alias pour B<--refuse-downgrade>."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:452
@@ -1310,7 +1303,6 @@ msgstr "B<--root=>I<rep> | B<--admindir=>I<rep> | B<--instdir=>I<rep>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:463
-#, fuzzy
 msgid ""
 "Change default directories. B<admindir> defaults to I</var/lib/dpkg> and "
 "contains many files that give information about status of installed or "
@@ -1371,7 +1363,6 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:480
-#, fuzzy
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
@@ -1383,7 +1374,7 @@ msgstr ""
 "Cette action envoie des informations sur l'état d'un paquet au descripteur "
 "de fichier I<E<lt>nE<gt>>. On peut répéter l'opération plusieurs fois. La "
 "mise à jour d'un état est de la forme\\ : «\\ status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>\\ ».  Une erreur est signalée sous la forme : "
+"E<lt>pkg stateE<gt>\\ ».  Une erreur est signalée sous la forme : "
 "E<lt>pkgE<gt>: error: extend-error-message.  Un conflit avec un fichier de "
 "configuration est signalé sous la forme : status: conffile-prompt: "
 "conffile : 'current-conffile' 'new-conffile' useredited distedited"
@@ -1396,7 +1387,6 @@ msgstr "B<--log=>I<fichier>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:492
-#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>, instead of the default "
 "I</var/log/dpkg.log>. If this option is given multiple times, the last "
@@ -1409,16 +1399,17 @@ msgid ""
 "changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 "Enregistre la modification de l'état, la mise à jour ou l'action sur "
-"I<fichier> au lieu de l'habituel I</var/log/dpkg.log>. Peut être répété. Les "
-"messages d'enregistrement sont de la forme AAAA-MM-JJ HH:MM:SS status "
-"E<lt>étatE<gt> E<lt>paquetE<gt> E<lt>version-installéeE<gt> pour les "
-"modifications d'état et les mises à jour. Pour une action, où "
-"I<E<lt>actionE<gt>> est «\\ install\\ », «\\ upgrade\\ », «\\ remove\\ » ou "
-"«\\ purge\\ », le message est de la forme AAAA-MM-JJ HH:MM:SS "
-"E<lt>actionE<gt> E<lt>paquetE<gt> E<lt>version-installéeE<gt> E<lt>version-"
-"disponibleE<gt>. Pour une modification de conffile, le message est de la "
-"forme AAAA-MM-JJ HH:MM:SS conffile E<lt>fichierE<gt> E<lt>décisionE<gt> ou "
-"E<lt>décisionE<gt> est soit install soit keep."
+"I<fichier> au lieu de l'habituel I</var/log/dpkg.log>. Si cette oprion est "
+"donnée plusieurs fois, le dernier fichier est utilisé. Les messages "
+"d'enregistrement sont de la forme AAAA-MM-JJ HH:MM:SS status E<lt>étatE<gt> "
+"E<lt>paquetE<gt> E<lt>version-installéeE<gt> pour les modifications d'état "
+"et les mises à jour. Pour une action, où I<E<lt>actionE<gt>> est «\\ install"
+"\\ », «\\ upgrade\\ », «\\ remove\\ » ou «\\ purge\\ », le message est de la "
+"forme AAAA-MM-JJ HH:MM:SS E<lt>actionE<gt> E<lt>paquetE<gt> E<lt>version-"
+"installéeE<gt> E<lt>version-disponibleE<gt>. Pour une modification de "
+"conffile, le message est de la forme AAAA-MM-JJ HH:MM:SS conffile "
+"E<lt>fichierE<gt> E<lt>décisionE<gt> ou E<lt>décisionE<gt> est soit install "
+"soit keep."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:492
@@ -1575,10 +1566,9 @@ msgstr "B<SHELL>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
-#, fuzzy
 msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr ""
-"Le programme qu'exécute B<dpkg> quand il lance un nouvel interpréteur de "
+"Le programme exécuté par B<dpkg> quand il lance un nouvel interpréteur de "
 "commandes."
 
 # type: TP
@@ -1604,9 +1594,8 @@ msgstr "EXEMPLES"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
-#, fuzzy
 msgid "To list packages related to the editor B<vi>(1):"
-msgstr "Pour afficher les paquets dont le nom contient la chaîne 'vi' :"
+msgstr "Pour afficher les paquets liés au programme B<vi>(1) :"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:549
@@ -1616,7 +1605,6 @@ msgstr "    B<dpkg -l \\(aq*vi*\\(aq>\n"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
-#, fuzzy
 msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr ""
 "Pour voir les entrées de I</var/lib/dpkg/available> concernant deux paquets"
