--- a/man/po4a/dpkg.cfg.5/po/fr.po
+++ b/man/po4a/dpkg.cfg.5/po/fr.po
@@ -11,7 +11,7 @@ msgstr ""
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg.cfg.5:1
@@ -61,7 +61,11 @@ msgid ""
 "option which is exactly the same as a normal command line option for dpkg "
 "except for the leading dashes which are not used here. Comments are allowed "
 "by starting a line with a hash sign (\"B<#>\")."
-msgstr "Ce fichier liste les options appliquées par défaut à dpkg. Chaque ligne contient une seule option, écrite exactement comme sur la ligne de commande mais sans les tirets. Les commentaires sont autorisés en faisant commencer la ligne par un caractère B<#>."
+msgstr ""
+"Ce fichier liste les options appliquées par défaut à dpkg. Chaque ligne "
+"contient une seule option, écrite exactement comme sur la ligne de commande "
+"mais sans les tirets. Les commentaires sont autorisés en faisant commencer "
+"la ligne par un caractère B<#>."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:12
@@ -90,7 +94,9 @@ msgstr "AUTEUR"
 msgid ""
 "See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
 "contributed to B<dpkg>."
-msgstr "Consultez I</usr/share/doc/dpkg/THANKS> pour la liste de ceux qui ont contribué à B<dpkg>."
+msgstr ""
+"Consultez I</usr/share/doc/dpkg/THANKS> pour la liste de ceux qui ont "
+"contribué à B<dpkg>."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:21
