--- a/man/po4a/dpkg-divert.8/po/fr.po
+++ b/man/po4a/dpkg-divert.8/po/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-08-02 21:53+0200\n"
-"PO-Revision-Date: 2006-06-24 10:26+0200\n"
+"PO-Revision-Date: 2006-08-17 10:38+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -83,7 +83,6 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:36
-#, fuzzy
 msgid ""
 "File `diversions' are a way of forcing B<dpkg>(1)  not to install a file "
 "into its location, but to a `diverted' location. Diversions can be used "
@@ -93,14 +92,14 @@ msgid ""
 "'conffiles') need to be preserved by dpkg, when installing a newer version "
 "of a package which contains those files."
 msgstr ""
-"Le «\\ détournement\\ » de fichier est un moyen d'obliger dpkg à installer "
-"un fichier non pas dans l'emplacement prévu mais dans un autre. Les scripts "
-"des paquets Debian se servent de la déviation pour déplacer les fichiers qui "
-"créent des conflits. Les administrateurs s'en servent, lors de "
+"Le «\\ détournement\\ » de fichier est un moyen d'obliger B<dpkg>(1) à "
+"installer un fichier non pas dans l'emplacement prévu mais dans un autre. "
+"Les scripts des paquets Debian se servent de la déviation pour déplacer les "
+"fichiers qui créent des conflits. Les administrateurs s'en servent, lors de "
 "l'installation d'une version plus récente d'un paquet, pour remplacer les "
 "fichiers de configuration de certains paquets, ou bien à chaque fois que des "
 "fichiers (qui ne sont pas des «\\ conffiles\\ ») doivent être préservés par "
-"Dpkg."
+"dpkg."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:44
@@ -146,13 +145,13 @@ msgstr "B<--divert>I< E<lt>détourner-dansE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:52
-#, fuzzy
 msgid ""
 "I<E<lt>divert-toE<gt>> is the location where the versions of "
 "I<E<lt>fileE<gt>>, as provided by other packages, will be diverted."
 msgstr ""
-"I<E<lt>paquetE<gt>> est le nom du paquet dont la copie de "
-"I<E<lt>fichierE<gt>> ne sera pas détournée."
+"I<E<lt>détourner-dansE<gt>> est l'emplacement vers lequel les versions de "
+"I<E<lt>fichierE<gt>>, tel qu'il est donné par d'autres paquets, seront "
+"détournées."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:52
@@ -168,6 +167,10 @@ msgid ""
 "file is diverted. This can be used by an admin to install a locally modified "
 "version."
 msgstr ""
+"Indique que toutes les versions de ce fichier sont détournées. Cela signifie "
+"qu'il n'y a pas d'exception et quelque soit le paquet installé, ce fichier "
+"sera détourné. Un administrateur peut par exemple installer une version "
+"modifiée localement."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:58
@@ -177,14 +180,15 @@ msgstr "B<--package>I< E<lt>paquetE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:63
-#, fuzzy
 msgid ""
 "I<E<lt>packageE<gt>> is the name of a package whose copy of "
 "I<E<lt>fileE<gt>> will not be diverted. i.e. I<E<lt>fileE<gt>> will be "
 "diverted for all packages except I<E<lt>packageE<gt>>."
 msgstr ""
 "I<E<lt>paquetE<gt>> est le nom du paquet dont la copie de "
-"I<E<lt>fichierE<gt>> ne sera pas détournée."
+"I<E<lt>fichierE<gt>> ne sera pas détournée. Autrement dit, "
+"I<E<lt>fichierE<gt>> sera détourné sauf s'il appartient à "
+"I<E<lt>paquetE<gt>>."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-divert.8:63
@@ -269,7 +273,6 @@ msgstr "On ne peut pas détourner des répertoires avec B<dpkg-divert>."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:92
-#, fuzzy
 msgid ""
 "Care should be taken when diverting shared libraries, B<ldconfig>(8)  "
 "creates a symbolic link based on the DT_SONAME field embedded in the "
@@ -278,7 +281,7 @@ msgid ""
 "has the same SONAME as the undiverted one."
 msgstr ""
 "Il faut faire attention quand une bibliothèque partagée est détournée. "
-"B<ldconfig> (8) crée un lien symbolique à partir du champ DT_SONAME embarqué "
+"B<ldconfig>(8) crée un lien symbolique à partir du champ DT_SONAME embarqué "
 "dans la bibliothèque. ldconfig ne connaît pas les détournements (seul dpkg "
 "le fait), et si une bibliothèque détournée possède le même SONAME que la "
 "bibliothèque non détournée, le lien symbolique peut pointer en fin de compte "
@@ -292,20 +295,20 @@ msgstr "EXEMPLES"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:97
-#, fuzzy
 msgid ""
 "To divert all copies of a I</usr/bin/example> to I</usr/bin/example.foo>, i."
 "e. directs all packages providing I</usr/bin/example> to install it as I</"
 "usr/bin/example.foo>, performing the rename if required:"
 msgstr ""
-"Pour détourner toutes les copies de I</usr/bin/example.foo> vers I</usr/bin/"
-"example>, il faut modifier le nom si c'est demandé\\ :"
+"Pour détourner toutes les copies de I</usr/bin/example> vers I</usr/bin/"
+"example.foo>, c'est-à-dire demander aux paquets qui fournissent I</usr/bin/"
+"example> de l'installer dans I</usr/bin/example.foo>, il faut modifier le nom"
+"\\ :"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:99
-#, fuzzy
 msgid "dpkg-divert --divert /usr/bin/example.foo --rename /usr/bin/example"
-msgstr "dpkg-divert --divert /usr/bin/example --rename /usr/bin/example.foo"
+msgstr "dpkg-divert --divert /usr/bin/example.foo --rename /usr/bin/example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:101
@@ -315,9 +318,8 @@ msgstr "Pour supprimer ce détournement\\ :"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:103
-#, fuzzy
 msgid "dpkg-divert --rename --remove /usr/bin/example"
-msgstr "dpkg-divert --rename --remove /usr/bin/example.foo"
+msgstr "dpkg-divert --rename --remove /usr/bin/example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:107
