Fix a typo in the dpkg-divert.8 man page, and regenerate the POT and POs. Thanks to Philippe Batailler for noticing.

--- a/man/po4a/dpkg-divert.8/po/dpkg-divert.8.pot
+++ b/man/po4a/dpkg-divert.8/po/dpkg-divert.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-08-02 21:53+0200\n"
+"POT-Creation-Date: 2006-08-17 11:52+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -261,7 +261,7 @@ msgstr ""
 msgid ""
 "To divert all copies of a I</usr/bin/example> to I</usr/bin/example.foo>, "
 "i.e. directs all packages providing I</usr/bin/example> to install it as "
-"I</usr/bin/example.foo>, performing the rename if required:"
+"I</usr/bin/example.foo>, performing the rename is required:"
 msgstr ""
 
 # type: Plain text
