--- a/man/po4a/dpkg-divert.8/po/fr.po
+++ b/man/po4a/dpkg-divert.8/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-02 21:53+0200\n"
+"POT-Creation-Date: 2006-08-17 11:52+0200\n"
 "PO-Revision-Date: 2006-08-17 10:38+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -298,7 +298,7 @@ msgstr "EXEMPLES"
 msgid ""
 "To divert all copies of a I</usr/bin/example> to I</usr/bin/example.foo>, i."
 "e. directs all packages providing I</usr/bin/example> to install it as I</"
-"usr/bin/example.foo>, performing the rename if required:"
+"usr/bin/example.foo>, performing the rename is required:"
 msgstr ""
 "Pour détourner toutes les copies de I</usr/bin/example> vers I</usr/bin/"
 "example.foo>, c'est-à-dire demander aux paquets qui fournissent I</usr/bin/"
