--- a/man/po4a/dpkg-divert.8/po/ja.po
+++ b/man/po4a/dpkg-divert.8/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-02 21:53+0200\n"
+"POT-Creation-Date: 2006-08-17 11:52+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -308,7 +308,7 @@ msgstr "EXAMPLES"
 msgid ""
 "To divert all copies of a I</usr/bin/example> to I</usr/bin/example.foo>, i."
 "e. directs all packages providing I</usr/bin/example> to install it as I</"
-"usr/bin/example.foo>, performing the rename if required:"
+"usr/bin/example.foo>, performing the rename is required:"
 msgstr ""
 
 # type: Plain text
