Updated Romanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-18  Eddy Petrișor  <eddy.petrisor@gmail.com>
+
+	* ro.po: updated to 920t
+
 2006-08-17  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* dpkg.pot: Regenerated.
