Updated Catalan translation (Robert Millan). Closes: #383448

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-18  Robert Millan  <rmh@aybabtu.com>
+
+	* ca.po: Fixed spelling errors.
+
 2006-08-18  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: updated to 920t
