Updated Galician translation of dpkg (920t)

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo, Rui Branco).
   * Czech (Miroslav Kure).
   * Dutch (Bart Cornelis).
+  * Galician (Jacobo Tarrio).
   * Hungarian (SZERVÁC Attila).
   * Romanian (Eddy Petrișor).
   * French (Frédéric Bothamy).
@@ -70,7 +71,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     read contains nul character" warning.
     Closes: #376351, #375749, #376724, #377279
 
- -- Guillem Jover <guillem@debian.org>  Wed, 21 Jun 2006 18:23:39 +0300
+ -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 18 Aug 2006 09:53:38 +0200
 
 dpkg (1.13.22) unstable; urgency=low
 
