--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-18  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 920t
+
 2006-08-18  Robert Millan  <rmh@aybabtu.com>
 
 	* ca.po: Fixed spelling errors.
