Updated Vietnamese translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,7 +20,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Hungarian (SZERVÁC Attila).
   * Romanian (Eddy Petrișor).
   * French (Frédéric Bothamy).
-  * Vietnamese (Clytie Siddall)
+  * Vietnamese (Clytie Siddall). Closes: #383588
   * Dansk (Claus Hindsgaul).
   * Khmer (Khoem Sokhem). Closes: #375099
   * Basque (Piarres Beobide). Closes: #375118
