--- a/po/vi.po
+++ b/po/vi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-06-23 17:35+0930\n"
+"PO-Revision-Date:2006-08-18 16:31+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
-"X-Generator: LocFactoryEditor 1.6a11\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: LocFactoryEditor 1.6fc1\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -1614,7 +1614,7 @@ msgstr " khuyên "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr ""
+msgstr " ngắt "
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -2820,23 +2820,24 @@ msgid "package architecture (%s) does not match system (%s)"
 msgstr "kiến trúc gói (%s) không khớp với hệ thống (%s)"
 
 #: src/processarc.c:256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg: về %s chứa %s, vấn đề phụ thuộc trước:\n"
-"%s"
+"dpkg: về %s chứa %s:\n"
+" gói dùng Breaks (điều ngắt)\n"
+"mà không được hỗ trợ trong trình dpkg này\n"
 
 #: src/processarc.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported dependency problem - not installing %.250s"
-msgstr "vấn đề phụ thuộc trước — không đang cài đặt %.250s"
+msgstr "vấn đề phụ thuộc không được hỗ trợ nên không cài đặt %.250s"
 
 #: src/processarc.c:262
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg: cảnh báo — đang lờ đi vấn đề phụ thuộc trước.\n"
+msgstr "dpkg: cảnh báo — đang lờ đi Breaks (điều ngắt)\n"
 
 #: src/processarc.c:275
 #, c-format
@@ -5627,90 +5628,3 @@ msgstr "thiếu ký tự dòng mới sau %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Gặp lỗi nghiêm trọng: %s"
-
-#~ msgid "unable to create %.250s"
-#~ msgstr "không thể tạo %.250s"
-
-#~ msgid "`%s' field, reference to `%.255s': version contains ` '"
-#~ msgstr "trường « %s », tham chiếu đến « %.255s »: phiên bản chứa « »"
-
-#~ msgid "%s: can't open %s: %s"
-#~ msgstr "%s: không thể mở %s: %s"
-
-#~ msgid "%s: can't create %s: %s"
-#~ msgstr "%s: không thể tạo %s: %s"
-
-#~ msgid "%s: error writing %s: %s"
-#~ msgstr "%s: lỗi ghi %s: %s"
-
-#~ msgid "%s: read %s: %s"
-#~ msgstr "%s: đọc %s: %s"
-
-#~ msgid "%s: close %s after read: %s"
-#~ msgstr "%s: đóng %s sau khi đọc: %s"
-
-#~ msgid "%s: error closing %s: %s"
-#~ msgstr "%s: lỗi đóng %s: %s"
-
-#~ msgid "%s: can't backup old %s, giving up: %s"
-#~ msgstr "%s: không thể sao lưu %s cũ nên chịu thua: %s"
-
-#~ msgid "--admindir needs a directory argument"
-#~ msgstr "« --admindir » cần đối số thư mục"
-
-#~ msgid "--remove needs a single argument"
-#~ msgstr "« --remove » cần một đỗi số đơn"
-
-#~ msgid "--truename needs a single argument"
-#~ msgstr "« --truename » cần một đối số đơn"
-
-#~ msgid "dpkg-divert: %s"
-#~ msgstr "dpkg-divert: %s"
-
-#~ msgid "You need --help"
-#~ msgstr "Bạn cần nhập tùy chọn trợ giúp « --help »"
-
-#~ msgid "--remove needs one arguments"
-#~ msgstr "« --remove » (gỡ bỏ) cần một đối số"
-
-#~ msgid "dpkg-statoverride: %s"
-#~ msgstr "dpkg-statoverride: %s"
-
-#~ msgid "You need --help."
-#~ msgstr "Bạn cần nhập tùy chọn trợ giúp « --help »."
-
-#~ msgid "open %s: %s"
-#~ msgstr "mở %s: %s"
-
-#~ msgid "read %s: %s"
-#~ msgstr "đọc %s: %s"
-
-#~ msgid "create %s: %s"
-#~ msgstr "tạo %s: %s"
-
-#~ msgid "write %s: %s"
-#~ msgstr "ghi %s: %s"
-
-#~ msgid "close %s: %s"
-#~ msgstr "đóng %s: %s"
-
-#~ msgid "install new %s: %s"
-#~ msgstr "cài đặt %s mới: %s"
-
-#~ msgid "%s: unlock %s: %s"
-#~ msgstr "%s: bỏ khoá %s: %s"
-
-#~ msgid "%s: read %s: %d"
-#~ msgstr "%s: đọc %s: %d"
-
-#~ msgid "update-alternatives: %s"
-#~ msgstr "update-alternatives: %s"
-
-#~ msgid "--admindir needs a <directory> argument"
-#~ msgstr "« --admindir » (thư mục quản lý) cần đối số <thư mục>"
-
-#~ msgid "failed to open %s: %s"
-#~ msgstr "lỗi mở %s: %s"
-
-#~ msgid "unable to install %s as %s"
-#~ msgstr "không thể cài đặt %s như là %s"
