Updated Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-06-24 22:58+0200\n"
+"PO-Revision-Date: 2006-08-18 17:12+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1584,7 +1584,7 @@ msgstr " doporučuje "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr ""
+msgstr " porušuje "
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -2698,23 +2698,23 @@ msgid "package architecture (%s) does not match system (%s)"
 msgstr "architektura balíku (%s) se neshoduje se systémem (%s)"
 
 #: src/processarc.c:256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg: dívám se na %s obsahující %s, před-závislostní problém:\n"
-"%s"
+"dpkg: dívám se na %s obsahující %s:\n"
+" balík používá pole Breaks, které není v této verzi dpkg podporováno\n"
 
 #: src/processarc.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported dependency problem - not installing %.250s"
-msgstr "před-závislostní problém - neinstaluji %.250s"
+msgstr "nepodporovaný problém se závislostmi - neinstaluji %.250s"
 
 #: src/processarc.c:262
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg: varování - ignoruji před-závislostní problém!\n"
+msgstr "dpkg: varování - ignoruji pole Breaks !\n"
 
 #: src/processarc.c:275
 #, c-format
