--- a/po/da.po
+++ b/po/da.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-17 16:02+0200\n"
-"PO-Revision-Date: 2006-06-23 11:29+0200\n"
+"PO-Revision-Date: 2006-08-19 23:59+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -156,8 +156,7 @@ msgstr ""
 
 #: lib/dbmodify.c:63
 #, c-format
-msgid ""
-"updates directory contains files with different length names (both %d and %d)"
+msgid "updates directory contains files with different length names (both %d and %d)"
 msgstr ""
 "opdateringsmappen indeholder filer med forskellige navnelængder (både %d og %"
 "d)"
@@ -281,8 +280,7 @@ msgstr "kunne ikke lukke '%.250s' efter skrivning af %s-information"
 #: lib/dump.c:323
 #, c-format
 msgid "failed to link `%.250s' to `%.250s' for backup of %s info"
-msgstr ""
-"kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
+msgstr "kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
 
 #: lib/dump.c:326
 #, c-format
@@ -423,10 +421,8 @@ msgstr "root- eller null-mappen er nævnt i konfigurationsfil"
 
 #: lib/fields.c:337
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
-msgstr ""
-"'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
+msgid "`%s' field, missing package name, or garbage where package name expected"
+msgstr "'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
 
 #: lib/fields.c:340
 #, c-format
@@ -758,14 +754,12 @@ msgstr "feltnavn '%.*s' skal efterfølges af et kolon"
 #: lib/parse.c:170
 #, c-format
 msgid "EOF before value of field `%.*s' (missing final newline)"
-msgstr ""
-"Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
+msgstr "Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
 
 #: lib/parse.c:174
 #, c-format
 msgid "MSDOS EOF char in value of field `%.*s' (missing newline?)"
-msgstr ""
-"MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
+msgstr "MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
 
 #: lib/parse.c:188
 #, c-format
@@ -849,8 +843,7 @@ msgstr "skal starte med alfanumerisk tegn"
 #: lib/parsehelp.c:123
 #, c-format
 msgid "character `%c' not allowed (only letters, digits and characters `%s')"
-msgstr ""
-"tegnet '%c' tillades ikke (kun bogstaver, tal og tegnene '%s' tillades)"
+msgstr "tegnet '%c' tillades ikke (kun bogstaver, tal og tegnene '%s' tillades)"
 
 #: lib/parsehelp.c:178
 msgid "<none>"
@@ -953,8 +946,7 @@ msgstr ""
 #: src/archives.c:407
 #, c-format
 msgid "unable to stat restored `%.255s' before installing another version"
-msgstr ""
-"kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
+msgstr "kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
 
 #: src/archives.c:439
 #, c-format
@@ -973,8 +965,7 @@ msgstr "Erstattet af filer i den installerede pakke %s ...\n"
 
 #: src/archives.c:508
 #, c-format
-msgid ""
-"trying to overwrite directory `%.250s' in package %.250s with nondirectory"
+msgid "trying to overwrite directory `%.250s' in package %.250s with nondirectory"
 msgstr "forsøger at overskrive mappen '%.250s' i pakken %.250s med ikke-mappe"
 
 #: src/archives.c:518
@@ -1206,8 +1197,7 @@ msgstr "%s - advarsel: nedgraderer %.250s fra %.250s til %.250s.\n"
 #: src/archives.c:1129
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr ""
-"Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
+msgstr "Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
 
 #: src/cleanup.c:83
 #, c-format
@@ -1312,8 +1302,7 @@ msgstr ""
 #: src/configure.c:233
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old backup `%.250s': %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke slette gammel sikkerhedskopi '%.250s': %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke slette gammel sikkerhedskopi '%.250s': %s\n"
 
 #: src/configure.c:241
 #, c-format
@@ -1335,8 +1324,7 @@ msgstr ""
 #: src/configure.c:262
 #, c-format
 msgid "dpkg: %s: warning - failed to remove `%.250s' (before overwrite): %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke slette '%.250s' (inden overskrivning): %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke slette '%.250s' (inden overskrivning): %s\n"
 
 #: src/configure.c:267
 #, c-format
@@ -1406,8 +1394,7 @@ msgstr "md5hash"
 #: src/configure.c:417
 #, c-format
 msgid "dpkg: %s: warning - unable to open conffile %s for hash: %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
 
 #: src/configure.c:435
 #, c-format
@@ -1417,8 +1404,7 @@ msgstr "kunne ikke ændre ejerskab af ny medsendt konfigurationsfil '%.250s'"
 #: src/configure.c:438
 #, c-format
 msgid "unable to set mode of new dist conffile `%.250s'"
-msgstr ""
-"kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
+msgstr "kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
 
 #: src/configure.c:468
 #, c-format
@@ -1440,8 +1426,7 @@ msgstr "kunne ikke udføre skal (%.250s)"
 
 #: src/configure.c:518
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
-msgstr ""
-"Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
+msgstr "Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
 
 #: src/configure.c:561
 #, c-format
@@ -1564,8 +1549,7 @@ msgstr "[ingen forvalgt handling]"
 
 #: src/configure.c:631
 msgid "error writing to stderr, discovered before conffile prompt"
-msgstr ""
-"fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
+msgstr "fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
 
 #: src/configure.c:638
 msgid "read error on stdin at conffile prompt"
@@ -1594,7 +1578,7 @@ msgstr " anbefaler "
 
 #: src/depcon.c:156
 msgid " breaks "
-msgstr ""
+msgstr " breaks "
 
 #: src/depcon.c:157
 msgid " conflicts with "
@@ -1801,10 +1785,8 @@ msgid "--print-architecture does not take any argument"
 msgstr "--print-architecture tager ingen parametre"
 
 #: src/enquiry.c:419
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
-msgstr ""
-"--compare-versions kræver tre parametre: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
+msgstr "--compare-versions kræver tre parametre: <version> <relation> <version>"
 
 #: src/enquiry.c:424
 msgid "--compare-versions bad relation"
@@ -1825,8 +1807,7 @@ msgstr ""
 " %s\n"
 
 #: src/errors.c:81
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg: kunne ikke frigøre hukommelse til ny indgang i listen over mislykkede "
 "pakker."
@@ -1851,8 +1832,7 @@ msgstr "Pakken %s var tilbageholdt, behandler den alligevel, efter dit ønske\n"
 
 #: src/errors.c:116
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "Pakken %s er tilbageholdt, rører den ikke.  Brug --force-hold for at "
 "gennemtvinge.\n"
@@ -2355,8 +2335,7 @@ msgstr ""
 #: src/main.c:134
 #, c-format
 msgid "Use `dselect' or `aptitude' for user-friendly package management.\n"
-msgstr ""
-"Brug 'dselect' eller 'aptitude' for en mere brugervenlig pakkehåndtering.\n"
+msgstr "Brug 'dselect' eller 'aptitude' for en mere brugervenlig pakkehåndtering.\n"
 
 #: src/main.c:141
 msgid ""
@@ -2593,8 +2572,7 @@ msgstr "--%s kræver mindst ét pakkenavn som parameter"
 msgid ""
 "you must specify packages by their own names, not by quoting the names of "
 "the files they come in"
-msgstr ""
-"du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
+msgstr "du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
 
 #: src/packages.c:150
 #, c-format
@@ -2665,8 +2643,7 @@ msgstr "kunne ikke sikre, at '%.250s' ikke eksisteret"
 
 #: src/processarc.c:117
 msgid "failed to exec dpkg-split to see if it's part of a multiparter"
-msgstr ""
-"kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
+msgstr "kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
 
 #: src/processarc.c:120
 msgid "wait for dpkg-split failed"
@@ -2723,23 +2700,23 @@ msgid "package architecture (%s) does not match system (%s)"
 msgstr "pakkearkitekturen (%s) passer ikke til systemet (%s)"
 
 #: src/processarc.c:256
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: regarding %s containing %s:\n"
 " package uses Breaks; not supported in this dpkg\n"
 msgstr ""
-"dpkg: vedrørende %s, der indeholder %s, forhånds-afhængighedsproblem:\n"
-"%s"
+"dpkg: vedrørende %s, der indeholder %s:\n"
+" pakken benytter Breaks; disse understøttes ikke af denne dpkg\n"
 
 #: src/processarc.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "unsupported dependency problem - not installing %.250s"
-msgstr "forhåndsafhængighedsproblem - installerer ikke %.250s"
+msgstr "ikke-understøttet afhængighedsproblem - installerer ikke %.250s"
 
 #: src/processarc.c:262
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring Breaks !\n"
-msgstr "dpkg: advarsel - ignorerer forhåndsafhængighedsproblem!\n"
+msgstr "dpkg: advarsel - ignorerer Breaks !\n"
 
 #: src/processarc.c:275
 #, c-format
@@ -2773,8 +2750,7 @@ msgstr "Udpakker %s (fra %s)...\n"
 #: src/processarc.c:321
 #, c-format
 msgid "name of conffile (starting `%.250s') is too long (>%d characters)"
-msgstr ""
-"navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
+msgstr "navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
 
 #: src/processarc.c:374
 #, c-format
@@ -2897,8 +2873,7 @@ msgstr "pakkekontrolinformation indeholdt mappen '%.250s'"
 #: src/processarc.c:792
 #, c-format
 msgid "package control info rmdir of `%.250s' didn't say not a dir"
-msgstr ""
-"pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
+msgstr "pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
 
 #: src/processarc.c:798
 #, c-format
@@ -2913,8 +2888,7 @@ msgstr "kunne ikke installere ny informationsfil '%.250s' som '%.250s'"
 #: src/processarc.c:962
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
-msgstr ""
-"(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
+msgstr "(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
 
 #: src/processarc.c:998
 #, c-format
@@ -2980,8 +2954,7 @@ msgstr "dpkg: %s ikke fundet.\n"
 #: src/query.c:341
 #, c-format
 msgid "Package `%s' is not installed and no info is available.\n"
-msgstr ""
-"Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
+msgstr "Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
 
 #: src/query.c:350
 #, c-format
@@ -3092,8 +3065,7 @@ msgstr ""
 
 #: src/remove.c:92
 #, c-format
-msgid ""
-"dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
+msgid "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
 msgstr ""
 "dpkg - advarsel: ignorerer ønsket om at afinstallere %.250s, som ikke er "
 "installeret.\n"
@@ -3284,8 +3256,7 @@ msgstr "kunne ikke tilgå dpkg's statusområde for rå tilgængelighedsopdatering"
 
 #: src/update.c:59
 msgid "bulk available update requires write access to dpkg status area"
-msgstr ""
-"rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
+msgstr "rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
 
 #: src/update.c:66
 #, c-format
@@ -3364,8 +3335,7 @@ msgstr "dpkg-deb: opbygger pakken '%s' i '%s'.\n"
 #: dpkg-deb/build.c:249
 #, c-format
 msgid "control directory has bad permissions %03lo (must be >=0755 and <=0775)"
-msgstr ""
-"kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
+msgstr "kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
 
 #: dpkg-deb/build.c:260
 #, c-format
@@ -3394,8 +3364,7 @@ msgstr "tom streng fra 'fgets' under læsning af konfigurationsfiler"
 
 #: dpkg-deb/build.c:278
 #, c-format
-msgid ""
-"warning, conffile name `%.50s...' is too long, or missing final newline\n"
+msgid "warning, conffile name `%.50s...' is too long, or missing final newline\n"
 msgstr ""
 "advarsel, konfigurationsfilnavn '%.50s...' er for langt, eller mangler "
 "afsluttende linjeskift\n"
@@ -3954,8 +3923,7 @@ msgstr "filen '%.250s' is ødelagt - nuller i informationsafsnittet"
 #: dpkg-split/info.c:116
 #, c-format
 msgid "file `%.250s' is format version `%.250s' - you need a newer dpkg-split"
-msgstr ""
-"filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
+msgstr "filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
 
 #: dpkg-split/info.c:124
 #, c-format
@@ -3987,8 +3955,7 @@ msgstr "filen '%.250s' is ødelagt - andet medlem er ikke datamedlem"
 #: dpkg-split/info.c:153
 #, c-format
 msgid "file `%.250s' is corrupt - wrong number of parts for quoted sizes"
-msgstr ""
-"filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
+msgstr "filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
 
 #: dpkg-split/info.c:157
 #, c-format
@@ -4076,8 +4043,7 @@ msgstr "filerne '%.250s' og '%.250s' er ikke dele af samme fil"
 #: dpkg-split/join.c:89
 #, c-format
 msgid "there are several versions of part %d - at least `%.250s' and `%.250s'"
-msgstr ""
-"der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
+msgstr "der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
 
 #: dpkg-split/join.c:102
 msgid "--join requires one or more part file arguments"
@@ -5857,3 +5823,4 @@ msgstr "Alvorligt problem: %s"
 #~ "  --msdos                         Generér 8.3-filnavne.\n"
 #~ "\n"
 #~ "Afslutningsstatus: 0 = o.k.;  1 = -a er ikke en del;  2 = problemer!\n"
+
